# taiwan-villages

./: .pre-commit-config.yaml  pyproject.toml
taiwan_villages/: __main__.py
