[build-system]
build-backend = "flit_core.buildapi"
requires = [ "flit-core>=3.11,<4" ]

[project]
name = "taiwan-villages"
version = "0.1.0"
description = "Convert GPS information to Taiwan village names"
readme = "readme.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "genutility[rich]>=0.0.119",
  "geopandas>=0.13.2",
  "matplotlib>=3.7.5",
  "pi-heif>=0.18",
  "piexif>=1.1.3",
  "pillow>=10.4",
  "shapely>=2.0.7",
]

scripts.taiwan-villages = "taiwan_villages.__main__:main"

[tool.ruff]
line-length = 120
lint.extend-select = [
  "B",
  "I",
]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[tool.bandit]
skips = [ "B101" ]
